--- a/find/build.gradle
+++ b/find/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'commons-cli:commons-cli:1.4'
 }
 
 mainClassName = 'spbstu.ProgKt'
