--- a/find/build.gradle
+++ b/find/build.gradle
@@ -22,6 +22,10 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'commons-cli:commons-cli:1.4'
+    testCompile('junit:junit:4.12'){
+        exclude group: 'org.hamcrest'
+    }
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
 mainClassName = 'spbstu.ProgKt'
